# GAIA-The-Sentient-Terrestrial-Super-Intelligent-Operating-System

./: .gitignore  .pre-commit-config.yaml  GAIA-Development-Environment-Setup-Guide-v1.0.md  GAIA-Economic-Sustainability-Model-v1.0.md  GAIA-Environmental-IoT-Integration-System-ATLAS-Data-Spine-v1.0.md  GAIA-Inter-Core-API-Contract-Specification-v1.0.md  GAIA-Master-Canonical-Document-v1.3.3.md  GAIA-P0-Blockers-Implementation-Roadmap-v1.0.md  GAIA-Performance-Benchmarking-Protocols-v1.0.md  GAIA-Performance-Benchmarking-and-Scalability-Protocols-v1.0.md  GAIA-Security-Threat-Modeling-Framework-v1.0.md  GAIA_Self_Organizing_Roadmap.md  README.md  generate_canonical_index.py  pyproject.toml  requirements.txt  setup_gaia_structure.sh
.github/workflows/: gaia-canonical.yml
cores/: base.py
docs/p0-blockers/: GAIA-Actuation-Policy-and-Legal-Authority-Gates-v1.0.md  GAIA-Consciousness-Evidence-Rubric-v1.0.md
docs/session-logs/: Day-1-2026-03-05.md
docs/specifications/consciousness/: GAIA_Meta_Cognitive_Architecture_Specification_v1.0.md  GAIA_Spatial_Ontology_Specification_v1.0.md  GAIA_Temporal_Ontology_Specification_v1.0.md
docs/specifications/os/: GAIA_Boot_Sequence_Specification_v1.0.md  GAIA_Graphics_Subsystem_Specification_v1.0.md  GAIA_IPC_Architecture_Specification_v1.0.md  GAIA_Network_Stack_Specification_v1.0.md  GAIA_Platform_API_Reference_v1.0.md  GAIA_Power_Management_Specification_v1.0.md  GAIA_System_Call_Reference_v1.0.md
gaia_integrity/: __init__.py  verify_all.py
measurement/: cgi.py
safety/: actuation_gate.py
