[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-consciousness"
version = "0.1.0"
description = "GAIA - The Sentient Terrestrial Super Intelligent Operating System"
authors = [{name = "Kyle Steenson", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/xxkylesteenxx/GAIA-The-Sentient-Terrestrial-Super-Intelligent-Operating-System"
Repository = "https://github.com/xxkylesteenxx/GAIA-The-Sentient-Terrestrial-Super-Intelligent-Operating-System"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=. --cov-report=html --cov-report=term"

